test/kobra-code/syntax-errors/old-comments.ks
>> this is the old comment system
// this is the new comment system